--- a/.github/ISSUE_TEMPLATE/migration.yml
+++ b/.github/ISSUE_TEMPLATE/migration.yml
@@ -11,14 +11,29 @@ body:
       description: Which repository contains the feature to be migrated?
     validations:
       required: true
+
   - type: textarea
     attributes:
       label: Description
       description: Briefly describe the feature to be migrated.
+
   - type: textarea
     attributes:
       label: Integration
       description: Do you have any ideas on how it should fit, or where it should go?
+
+  - type: dropdown
+    attributes:
+      label: Priority
+      options:
+        - P3 - Low
+        - P2 - Medium
+        - P1 - High
+        - P0 - Urgent
+      default: 0
+    validations:
+      required: true
+
   - type: textarea
     attributes:
       label: Other Context
